# Spine_Project

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  generate_dataset.py  generation_labels.py  input_list.csv  main_dataset.py  nifti_list.csv  phase0_generate_labels.py  pyproject.toml  segmentation_spine.py
context/: lstm_implementation_plan.md  plan.md  preprocessing_pipeline.md
data_preprocessing/: generate_dataset.py  generation_labels.py
prototype/: README.md  context.md  dataset.py  model.py  train.py
prototype2/: .gitignore  dataset.py  model.py  train.py
prototype3/: README.md  dataset.py  docs.md  evaluate.py  loss.py  model.py  train.py
