[project]
name = "cervical-spine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nibabel>=5.3.2",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pydicom>=3.0.1",
    "scipy>=1.16.3",
    "totalsegmentator>=2.11.0",
    "tqdm>=4.67.1",
]
