[project]
name = "cervical-spine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nibabel>=5.3.2",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pydicom>=3.0.1",
    "scipy>=1.16.3",
    "totalsegmentator>=2.11.0",
    "tqdm>=4.67.1",
    # 深層学習関連
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "albumentations>=1.3.0",
    "scikit-learn>=1.3.0",
    "hydra-core>=1.3.0",
    "wandb>=0.16.0",
]
